--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,14 +1,11 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
 <style>
     body {
         background-color: #eefaf8;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        margin: 0;
     }
     .brand {
         font-size: 20px;
@@ -22,6 +19,12 @@
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         padding: 20px;
     }
+    .center-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
     .centered-text {
         text-align: center;
     }
@@ -32,22 +35,19 @@
         <div class="col-md-6">
             <div class="background-container">
 
-            <h1 class="centered-text mb-4">Add New Product</h1>
+<h1 class="centered-text mb-4">Edit Product</h1>
 
-            <form method="POST">
-                {% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                    <tr>
-                        <td></td>
-                        <td class="form-group mt-2 mb-4 d-grid gap-2">
-                            <input type="submit" value="Add Product" class="btn btn-primary"/>
-                        </td>
-                    </tr>
-                </table>
-            </form>
-        </div>
-        </div>
-    </div>
-</div>
+<form method="POST">
+    {% csrf_token %}
+    <table>
+        {{ form.as_table }}
+        <tr>
+            <td></td>
+            <td class="form-group mt-2 d-grid gap-2">
+                <input type="submit" value="Edit Product" class="btn btn-primary"/>
+            </td>
+        </tr>
+    </table>
+</form>
+
 {% endblock %}
