--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,61 +1,92 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>nyasia & co.</h1>
+<style>
+    body {
+        background-color: #eefaf8;
+    }
+    .custom-padding {
+        padding-right: 10px; /* Adjust this value as needed */
+    }
+</style>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #c0efe5;">
+    <span class="navbar-brand mb-0 h1" href="#" style="padding-left: 10px; padding-right: 10px;"><strong>Nyasia & Co.</strong></span>
+    </button>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <span class="navbar-text">
+                <div class= "name-class">
+                    Welcome, {{ name }}  
+                </div>
+            </span>
+        </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <span class="navbar-text">
+                <div class="name-class">
+                    Class: {{ class }}
+                </div>
+            </span>
+        </li>
+    </ul>
+    <ul class="navbar-nav ml-auto col d-flex justify-content-end custom-padding">
+        <li class="nav-item">
+            <div class="mr-auto pr-2">
+                <a class="btn btn-danger" href="{% url 'main:logout' %}" >Logout</a>
+            </div>
+        </li>
+    </ul>       
+    </nav>    
+<div class="container mt-5">
+    <h1>Nyasia & Co.</h1>
 
-    <h5>Name:</h5>
-    <p>{{ name }}</p>
-
-    <h5>Class:</h5>
-    <p>{{ class }}</p>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Amount</th>
-            <th>Description</th>
-        </tr>
-        
-        {% for product in products %}
+    <table class="table table-bordered table-striped mt-3">
+        <thead class="table-dark text-center">
             <tr>
-                <td>{{ product.name }}</td>
-                <td>{{ product.amount }}</td>
-                <td>{{ product.description }}</td>
-                <td>
-                    <a href="{% url 'main:add_amount' product.id %}">
-                        <button>
-                            +
-                        </button>
-                    </a>
-                    <a href="{% url 'main:minus_amount' product.id %}">
-                        <button>
-                            -
-                        </button>
-                    </a>
-                    <a href="{% url 'main:delete_item' product.id %}">
-                        <button>
-                            Delete
-                        </button>
-                    </a>
-                </td>
+                <th>Name</th>
+                <th class="col-1">Amount</th>
+                <th>Description</th>
+                <th class="col-2"> </th>
             </tr>
-        {% endfor %}
+        </thead>
+        <tbody class="table-group-divider">
+            {% for product in products %}
+                <tr>
+                    <td>{{ product.name }}</td>
+                    <td>
+                        <div class="d-flex justify-content-between ">
+                            <a href="{% url 'main:add_amount' product.id %}" class="btn btn-outline-secondary btn-sm mr-3">
+                                +
+                            </a>
+                            {{ product.amount }}
+                            <a href="{% url 'main:minus_amount' product.id %}" class="btn btn-outline-secondary btn-sm ml-3">
+                                -
+                            </a>
+                        </div>
+                    </td>
+                    <td>{{ product.description }}</td>
+                    <td class="text-center">
+                        <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-primary btn-sm">
+                            Edit
+                        </a>
+                        <a href="{% url 'main:delete_item' product.pk %}" class="btn btn-danger btn-sm">
+                            Delete
+                        </a>
+                    </td>
+                </tr >
+            {% endfor %}
+        </tbody>
     </table>
-    
-    <br />
-
-    <h5>Sesi terakhir login: {{ last_login }}</h5>
-    
-    <a href="{% url 'main:create_product' %}">
-        <button>
-            Add New Product
-        </button>
+    <h5 class="mt-4">Last login session: {{ last_login }}</h5>
+    <a href="{% url 'main:create_product' %}" class="btn btn-success mt-2">
+        Add New Product
     </a>
-    <br />
-    <br />
-    <a href="{% url 'main:logout' %}">
-        <button>
-            Logout
-        </button>
-    </a>
+</div>
 
+<style>
+    .name-class {
+        margin-right: 10px;
+    }
+</style>
 {% endblock content %}
