--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -4,31 +4,60 @@
     <title>Register</title>
 {% endblock meta %}
 
-{% block content %}  
+{% block content %}
+<style>
+    body {
+        background-color: #eefaf8;
+    }
+    .brand {
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .background-container {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        padding: 20px;  
+    }
+    .center-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+    }
+    .centered-text {
+        text-align: center;
+    }
+</style>
+<div class="container">
+    <div class="brand">Nyasia & Co.</div>
+    <div class="row justify-content-center align-items-top min-vh-100">
+        <div class="col-md-6">
+            <div class="login background-container">
+                <h1 class="centered-text mb-4">Register</h1>
 
-<div class = "login">
-    
-    <h1>Register</h1>  
+                <form method="POST">
+                    {% csrf_token %}
+                    <table>
+                        {{ form.as_table }}
+                        <tr>
+                            <td></td>
+                            <td class="d-grid gap-2"><input type="submit" name="submit" value="Register" class="btn btn-primary mt-4"/></td>
+                        </tr>
+                    </table>
+                </form>
 
-        <form method="POST" >  
-            {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input type="submit" name="submit" value="Daftar"/></td>  
-                </tr>  
-            </table>  
-        </form>
-
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
-
-</div>  
-
+                {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
