--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,66 +1,103 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+
 <style>
     body {
-        background-color: #eefaf8;
+        background-color: #c9efe8;
     }
+    
     .custom-padding {
-        padding-right: 10px; /* Adjust this value as needed */
+        padding-right: 10px;
+    }
+    .playfair {
+        font-family: 'Playfair Display', serif;
+        font-weight: bold;
+    }
+    .noto-serif {
+        font-family: 'Noto Serif', serif;
+    }
+    .name-class {
+        margin-right: 10px;
+    }
+
+    /* Add your custom table styles here */
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+    table, th, td {
+        border: 1.5px solid #dedddd;
+        vertical-align: middle;
+        padding: 10px;
+        font-weight: 600;
+    }
+    th {
+        background-color: #151414;
+        color: #f7f7f7;
+        text-align: center;
+        font-weight: bold;
+    }
+    td {
+        vertical-align: top;
+    }
+    tr:nth-child(odd) {
+        background-color: #f2f2f2;
+    }
+    tr:nth-child(even) {
+        background-color: #ffff;
+    }
+    tr:last-child {
+        background-color: #6daab5;
     }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #c0efe5;">
-    <span class="navbar-brand mb-0 h1" href="#" style="padding-left: 10px; padding-right: 10px;"><strong>Nyasia & Co.</strong></span>
+<nav class="navbar navbar-expand-lg navbar-light " style="background-color: #a3e4d9;">
+    <span class="navbar-brand mb-0 h1 playfair" href="#" style="padding-left: 10px; padding-right: 10px;"><strong>Nyasia & Co.</strong></span>
     </button>
     <ul class="navbar-nav ml-auto">
         <li class="nav-item">
             <span class="navbar-text">
-                <div class= "name-class">
-                    Welcome, {{ name }}  
-                </div>
-            </span>
-        </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <span class="navbar-text">
-                <div class="name-class">
-                    Class: {{ class }}
+                <div class="name-class noto-serif">
+                    Welcome, {{ name }}
                 </div>
             </span>
         </li>
     </ul>
     <ul class="navbar-nav ml-auto col d-flex justify-content-end custom-padding">
         <li class="nav-item">
-            <div class="mr-auto pr-2">
-                <a class="btn btn-danger" href="{% url 'main:logout' %}" >Logout</a>
+            <div class="mr-auto pr-2 ">
+                <a class="btn btn-danger " href="{% url 'main:logout' %}"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><style>svg{fill:#ffffff}</style><path d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"/></svg>
+                     Logout
+                </a>
             </div>
         </li>
-    </ul>       
-    </nav>    
+    </ul>
+</nav>
 <div class="container mt-5">
-    <h1>Nyasia & Co.</h1>
+    <h1 class="playfair mb-3">Nyasia & Co.</h1>
 
-    <table class="table table-bordered table-striped mt-3">
-        <thead class="table-dark text-center">
+    <table>
+        <thead>
             <tr>
                 <th>Name</th>
                 <th class="col-1">Amount</th>
                 <th>Description</th>
-                <th class="col-2"> </th>
+                <th class="col-1">Actions</th>
             </tr>
         </thead>
-        <tbody class="table-group-divider">
+        <tbody class="table-group-divider last-table">
             {% for product in products %}
                 <tr>
                     <td>{{ product.name }}</td>
                     <td>
-                        <div class="d-flex justify-content-between ">
-                            <a href="{% url 'main:add_amount' product.id %}" class="btn btn-outline-secondary btn-sm mr-3">
+                        <div class="d-flex justify-content-between">
+                            <a href="{% url 'main:add_amount' product.id %}" class="btn btn-outline-secondary btn-sm mr-4">
                                 +
                             </a>
                             {{ product.amount }}
-                            <a href="{% url 'main:minus_amount' product.id %}" class="btn btn-outline-secondary btn-sm ml-3">
+                            <a href="{% url 'main:minus_amount' product.id %}" class="btn btn-outline-secondary btn-sm ml-4">
                                 -
                             </a>
                         </div>
@@ -68,25 +105,27 @@
                     <td>{{ product.description }}</td>
                     <td class="text-center">
                         <a href="{% url 'main:edit_product' product.pk %}" class="btn btn-primary btn-sm">
-                            Edit
-                        </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                                <style>svg{fill:#ffffff}</style>
+                                <path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"/>
+                            </svg>
+                        </a>                        
                         <a href="{% url 'main:delete_item' product.pk %}" class="btn btn-danger btn-sm">
-                            Delete
-                        </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                                <style>svg{fill:#ffffff}</style>
+                                <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/>
+                            </svg>
+                        </a>                        
                     </td>
-                </tr >
+                </tr>
+                
             {% endfor %}
         </tbody>
     </table>
-    <h5 class="mt-4">Last login session: {{ last_login }}</h5>
+
+    <h5 class="mt-4 noto-serif"><strong>Last login session: {{ last_login }}</strong></h5>
     <a href="{% url 'main:create_product' %}" class="btn btn-success mt-2">
         Add New Product
     </a>
 </div>
-
-<style>
-    .name-class {
-        margin-right: 10px;
-    }
-</style>
 {% endblock content %}
