--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -5,9 +5,11 @@
 {% endblock meta %}
 
 {% block content %}
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
-        background-color: #eefaf8;
+        background: rgb(125,216,201);
+        background: radial-gradient(circle, rgba(125,216,201,1) 0%, rgba(238,250,248,1) 100%);
     }
     .brand {
         font-size: 20px;
@@ -30,9 +32,13 @@
     .centered-text {
         text-align: center;
     }
+    .playfair {
+        font-family: 'Playfair Display', serif;
+        font-weight: bold; 
+    }
 </style>
 <div class="container">
-    <div class="brand">Nyasia & Co.</div>
+    <div class="brand playfair">Nyasia & Co.</div>
     <div class="row justify-content-center align-items-top min-vh-100">
         <div class="col-md-6">
             <div class="login background-container">
@@ -44,8 +50,16 @@
                         {{ form.as_table }}
                         <tr>
                             <td></td>
-                            <td class="d-grid gap-2"><input type="submit" name="submit" value="Register" class="btn btn-primary mt-4"/></td>
-                        </tr>
+                            <td class="d-grid gap-2">
+                                <button type="submit" name="submit" class="btn btn-primary mt-4">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512">
+                                        <style>svg{fill:#ffffff}</style>
+                                        <path d="M96 128a128 128 0 1 1 256 0A128 128 0 1 1 96 128zM0 482.3C0 383.8 79.8 304 178.3 304h91.4C368.2 304 448 383.8 448 482.3c0 16.4-13.3 29.7-29.7 29.7H29.7C13.3 512 0 498.7 0 482.3zM504 312V248H440c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V136c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H552v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"/>
+                                    </svg>
+                                    Register
+                                </button>
+                            </td>
+                        </tr>                                                
                     </table>
                 </form>
 
