--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -133,7 +133,7 @@
 
     <h5 class="mt-4 noto-serif"><strong>Last login session: {{ last_login }}</strong></h5>
     <a href="{% url 'main:create_product' %}" class="btn btn-success mt-2">
-        Add New Item
+        Add New Product
     </a>
 </div>
 {% endblock content %}
