--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -76,6 +76,7 @@
 
 <div class="container mt-5 background-container">
     <h1 class="playfair mb-3">Nyasia & Co.</h1>
+    <p class="noto-serif">You have saved <b>{{ items_count }}</b> items in this app</p>
 
 <div id="product_cards" class="row mt-3"></div>
 
@@ -118,39 +119,53 @@
     async function getProducts() {
         return fetch("{% url 'main:get_product_json' %}").then((res) => res.json())
     }
-    async function refreshProducts() {
-        document.getElementById("product_cards").innerHTML = ""
-        const products = await getProducts()
-        products.forEach((product) => {
-        const card = document.createElement("div");
-        card.classList.add("col-md-4", "mb-4");
-        card.innerHTML = `
-        <div class="card">
-            <div class="card-body">
-            <h5 class="card-title playfair">${product.fields.name}</h5>
-            <p class="card-text noto-serif">${product.fields.description}</p>
-            <p class="card-text noto-serif">Amount: ${product.fields.amount}</p>
-            <button class="btn btn-danger" onclick="deleteProduct(${product.pk})">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
-                    <style>svg{fill:#ffffff}</style>
-                    <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/>
-                </svg>
-            </button>
-            </div>
-        </div>
-        `;
 
-        document.getElementById("product_cards").appendChild(card);
-    });
+    async function refreshProducts() {
+        document.getElementById("product_cards").innerHTML = "";
+        const products = await getProducts();
+        
+        products.forEach((product) => {
+            const addAmountUrl = `{% url 'main:add_amount' 999999 %}`.replace('999999', product.pk);
+            const minusAmountUrl = `{% url 'main:minus_amount' 999999 %}`.replace('999999', product.pk);
+            const editUrl = "{% url 'main:edit_product' 999999 %}".replace('999999', product.pk);
+            const card = document.createElement("div");
+            card.classList.add("col-md-4", "mb-4");
+            card.innerHTML = `
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title playfair">${product.fields.name}</h5>
+                        <p class="card-text noto-serif">${product.fields.description}</p>
+                        <div class="d-flex justify-content">
+                            <a href="${addAmountUrl}" class="btn btn-outline-secondary btn-sm mx-1 my-1">+</a>
+                            <p class="card-text noto-serif my-1">${product.fields.amount}</p>
+                            <a href="${minusAmountUrl}" class="btn btn-outline-secondary btn-sm mx-1 my-1">-</a>
+                        </div>
+                        <div class="d-flex justify-content">
+                            <button class="btn btn-danger my-1" onclick="deleteProduct(${product.pk})">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                                    <style>svg{fill:#ffffff}</style>
+                                    <path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/>
+                                </svg>
+                            </button>
+                            <a href="${editUrl}" class="btn btn-primary btn-sm mx-1 my-1">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><style>svg{fill:#ffffff}</style><path d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"/></svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            `;
+            document.getElementById("product_cards").appendChild(card);
+        });
     }
-    refreshProducts()
+
+    refreshProducts();
 
     function addProduct() {
         fetch("{% url 'main:add_product_ajax' %}", {
             method: "POST",
             body: new FormData(document.querySelector('#form'))
-        }).then(refreshProducts)
-
+        }).then(refreshProducts);
+        window.location.reload()
         document.getElementById("form").reset()
         return false
     }
@@ -164,6 +179,7 @@
 
         if (response.status === 200) {
             refreshProducts();
+            window.location.reload()
         } else if (response.status === 404) {
             console.log("Product not found");
         } else {
